# uid2-aws-enclave-vsockproxy

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build-and-test.yml  publish-pre-release.yml  publish-release.yml
vsock-bridge/: CMakeLists.txt
vsock-bridge/include/: buffer.h  channel.h  config.h  dispatcher.h  endpoint.h  epoll_poller.h  eventdef.h  iothread.h  listener.h  logger.h  peer.h  poller.h  proxy.h  socket.h  threading.h  version.h.in  vsock-bridge.h
vsock-bridge/src/: CMakeLists.txt  channel.cpp  config.cpp  epoll_poller.cpp  global.cpp  iothread.cpp  logger.cpp  socket.cpp  vsock-bridge.cpp
vsock-bridge/test/: CMakeLists.txt  mocks.h  test_buffer.cpp  test_channel.cpp  test_socket.cpp  test_threading.cpp  testmain.cpp
